--- a/cardioception/notebooks/HeartBeatCounting.ipynb
+++ b/cardioception/notebooks/HeartBeatCounting.ipynb
@@ -96,6 +96,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "id": "8cYkrDMvKdaY"
